objects/FSL_SMN_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <externalId>true</externalId>
        <label>Program Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMN__c</fullName>
        <label>SMN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Skill Unique Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>FSL SMN Skill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SMN__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Program_Id__c</columns>
        <columns>Skill_Unique_Id__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Program_Id__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Skill_Unique_Id__c</columns>
        <columns>SMN__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{000}</displayFormat>
        <label>SMN Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL SMN Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>